seller - sidebar drwawer overflow issue solve

--- a/src/modules/commonContainers/sectionedContainer/sectioned_container.module.scss
+++ b/src/modules/commonContainers/sectionedContainer/sectioned_container.module.scss
@@ -96,8 +96,12 @@
 ////////////////////////////////////////////////////////////////////////
 
 @include small {
+  .drawer_container {
+    overflow: auto;
+  }
   .header_container {
     height: unset;
+    padding: 15px 0px;
   }
 
   .page_container {
